--- a/package.json
+++ b/package.json
@@ -32,27 +32,28 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.544.0",
-    "next": "15.5.3",
-    "next-auth": "5.0.0-beta.29",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "fuse.js": "^7.1.0",
+    "lucide-react": "^0.552.0",
+    "next": "16.0.1",
+    "next-auth": "^5.0.0-beta.30",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.6"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "autoprefixer": "^10.4.21",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "16.0.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-packagejson": "^2.5.19",
-    "prettier-plugin-tailwindcss": "^0.6.14",
-    "tailwindcss": "^3.4.0"
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "tailwindcss": "^4"
   }
 }
