--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
-    "lucide-react": "0.554.0",
+    "lucide-react": "^0.563.0",
     "next": "^16",
     "next-auth": "^5.0.0-beta.30",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.6"
@@ -46,14 +46,14 @@
     "@tailwindcss/postcss": "^4",
     "autoprefixer": "^10.4.21",
     "baseline-browser-mapping": "^2.8.32",
-    "eslint": "^9",
+    "eslint": "^10.0.0",
     "eslint-config-next": "^16",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.3.0",
-    "prettier-plugin-packagejson": "^2.5.19",
+    "prettier-plugin-packagejson": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^4"
   }
